k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 2               # We want 2 pods for high availability
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: 399010259304.dkr.ecr.us-east-1.amazonaws.com/devops-pet-app:v1 # <-- PASTE YOUR ECR URL HERE
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
      imagePullSecrets:
      - name: ecr-registry-secret # We will create this secret in the next step
